criando os end points de cadastro e teste case, persistindo os dados na base e validando os dados
